// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResearchState > ResearchState theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <div
    class="rh-state"
    data-case="stream-interrupted"
    data-kind="partial"
    data-tone="warning"
    role="status"
  >
    <span
      class="rh-state__icon"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-dashed rh-icon"
        data-icon="circle-dashed"
        fill="none"
        focusable="false"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.1 2.182a10 10 0 0 1 3.8 0"
        />
        <path
          d="M13.9 21.818a10 10 0 0 1-3.8 0"
        />
        <path
          d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
        />
        <path
          d="M2.182 13.9a10 10 0 0 1 0-3.8"
        />
        <path
          d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
        />
        <path
          d="M21.818 10.1a10 10 0 0 1 0 3.8"
        />
        <path
          d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
        />
        <path
          d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
        />
      </svg>
    </span>
    <div
      class="rh-state__body"
    >
      <p
        class="rh-state__kind"
      >
        Partial
      </p>
      <p
        class="rh-state__title"
      >
        The response was interrupted
      </p>
      <p
        class="rh-state__description"
      >
        Part of the reply arrived before the connection dropped. It is kept in the transcript and marked partial.
      </p>
      <p
        class="rh-state__safety"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-lock rh-icon"
          data-icon="lock"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="11"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="11"
          />
          <path
            d="M7 11V7a5 5 0 0 1 10 0v4"
          />
        </svg>
        <span>
          Your draft is safe. The source is unchanged.
           
          Nothing was accepted into the corpus from a partial reply.
        </span>
      </p>
      <div
        class="rh-state__actions"
      >
        <button
          class="rh-button rh-button--primary rh-button--sm"
          data-variant="primary"
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <span
              class="rh-button__label"
            >
              Continue
            </span>
          </span>
        </button>
      </div>
      <div
        class="rh-state__retained"
      >
        <p
          class="rh-state__retained-label"
        >
          Showing the last result that succeeded
        </p>
        <p>
          The partial reply so far.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResearchState > ResearchState theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <div
    class="rh-state"
    data-case="stream-interrupted"
    data-kind="partial"
    data-tone="warning"
    role="status"
  >
    <span
      class="rh-state__icon"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-dashed rh-icon"
        data-icon="circle-dashed"
        fill="none"
        focusable="false"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.1 2.182a10 10 0 0 1 3.8 0"
        />
        <path
          d="M13.9 21.818a10 10 0 0 1-3.8 0"
        />
        <path
          d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
        />
        <path
          d="M2.182 13.9a10 10 0 0 1 0-3.8"
        />
        <path
          d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
        />
        <path
          d="M21.818 10.1a10 10 0 0 1 0 3.8"
        />
        <path
          d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
        />
        <path
          d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
        />
      </svg>
    </span>
    <div
      class="rh-state__body"
    >
      <p
        class="rh-state__kind"
      >
        Partial
      </p>
      <p
        class="rh-state__title"
      >
        The response was interrupted
      </p>
      <p
        class="rh-state__description"
      >
        Part of the reply arrived before the connection dropped. It is kept in the transcript and marked partial.
      </p>
      <p
        class="rh-state__safety"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-lock rh-icon"
          data-icon="lock"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="11"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="11"
          />
          <path
            d="M7 11V7a5 5 0 0 1 10 0v4"
          />
        </svg>
        <span>
          Your draft is safe. The source is unchanged.
           
          Nothing was accepted into the corpus from a partial reply.
        </span>
      </p>
      <div
        class="rh-state__actions"
      >
        <button
          class="rh-button rh-button--primary rh-button--sm"
          data-variant="primary"
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <span
              class="rh-button__label"
            >
              Continue
            </span>
          </span>
        </button>
      </div>
      <div
        class="rh-state__retained"
      >
        <p
          class="rh-state__retained-label"
        >
          Showing the last result that succeeded
        </p>
        <p>
          The partial reply so far.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResearchState > ResearchState theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <div
    class="rh-state"
    data-case="stream-interrupted"
    data-kind="partial"
    data-tone="warning"
    role="status"
  >
    <span
      class="rh-state__icon"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-dashed rh-icon"
        data-icon="circle-dashed"
        fill="none"
        focusable="false"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.1 2.182a10 10 0 0 1 3.8 0"
        />
        <path
          d="M13.9 21.818a10 10 0 0 1-3.8 0"
        />
        <path
          d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
        />
        <path
          d="M2.182 13.9a10 10 0 0 1 0-3.8"
        />
        <path
          d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
        />
        <path
          d="M21.818 10.1a10 10 0 0 1 0 3.8"
        />
        <path
          d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
        />
        <path
          d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
        />
      </svg>
    </span>
    <div
      class="rh-state__body"
    >
      <p
        class="rh-state__kind"
      >
        Partial
      </p>
      <p
        class="rh-state__title"
      >
        The response was interrupted
      </p>
      <p
        class="rh-state__description"
      >
        Part of the reply arrived before the connection dropped. It is kept in the transcript and marked partial.
      </p>
      <p
        class="rh-state__safety"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-lock rh-icon"
          data-icon="lock"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="11"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="11"
          />
          <path
            d="M7 11V7a5 5 0 0 1 10 0v4"
          />
        </svg>
        <span>
          Your draft is safe. The source is unchanged.
           
          Nothing was accepted into the corpus from a partial reply.
        </span>
      </p>
      <div
        class="rh-state__actions"
      >
        <button
          class="rh-button rh-button--primary rh-button--sm"
          data-variant="primary"
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <span
              class="rh-button__label"
            >
              Continue
            </span>
          </span>
        </button>
      </div>
      <div
        class="rh-state__retained"
      >
        <p
          class="rh-state__retained-label"
        >
          Showing the last result that succeeded
        </p>
        <p>
          The partial reply so far.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResearchState > ResearchState theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <div
    class="rh-state"
    data-case="stream-interrupted"
    data-kind="partial"
    data-tone="warning"
    role="status"
  >
    <span
      class="rh-state__icon"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-dashed rh-icon"
        data-icon="circle-dashed"
        fill="none"
        focusable="false"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.1 2.182a10 10 0 0 1 3.8 0"
        />
        <path
          d="M13.9 21.818a10 10 0 0 1-3.8 0"
        />
        <path
          d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
        />
        <path
          d="M2.182 13.9a10 10 0 0 1 0-3.8"
        />
        <path
          d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
        />
        <path
          d="M21.818 10.1a10 10 0 0 1 0 3.8"
        />
        <path
          d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
        />
        <path
          d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
        />
      </svg>
    </span>
    <div
      class="rh-state__body"
    >
      <p
        class="rh-state__kind"
      >
        Partial
      </p>
      <p
        class="rh-state__title"
      >
        The response was interrupted
      </p>
      <p
        class="rh-state__description"
      >
        Part of the reply arrived before the connection dropped. It is kept in the transcript and marked partial.
      </p>
      <p
        class="rh-state__safety"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-lock rh-icon"
          data-icon="lock"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="11"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="11"
          />
          <path
            d="M7 11V7a5 5 0 0 1 10 0v4"
          />
        </svg>
        <span>
          Your draft is safe. The source is unchanged.
           
          Nothing was accepted into the corpus from a partial reply.
        </span>
      </p>
      <div
        class="rh-state__actions"
      >
        <button
          class="rh-button rh-button--primary rh-button--sm"
          data-variant="primary"
          type="button"
        >
          <span
            class="rh-button__content"
          >
            <span
              class="rh-button__label"
            >
              Continue
            </span>
          </span>
        </button>
      </div>
      <div
        class="rh-state__retained"
      >
        <p
          class="rh-state__retained-label"
        >
          Showing the last result that succeeded
        </p>
        <p>
          The partial reply so far.
        </p>
      </div>
    </div>
  </div>
</div>
`;
